Nginxbrew changes

Nginxbrew 0.0.6
 - You can change ngx-user/group by config file which specified in env {NGINXBREW_CONFIG}.
 - Add/update build options by hash in ruby.
 - Change default conf path to prefix dir.


Nginxbrew 0.0.5
 - Changed some directory/path for installation.
 - Quiet shell outs.
 - Hide src directory.
 - Bug fixes.


Nginxbrew 0.0.4
 - New command nginxies, openresties to show up available nginx versions.
 - Change `configure` option to share pid-file, tmp dir extend over all builds.
 - Change `make` to add -j2, TODO get num of CPUs dynamically
 - Bug fixes.


Nginxbrew 0.0.3
 - Initial commit.
